0.2.7 (not yet released)
- new row_key_attributes method: allows parts of the row key to be extracted
  into attributes on the instantiated object

0.2.6 2009/04/20
- fix bug interacting with new open_scanner API

0.2.5 2009/04/20
- added methods to raw ruby thrift client for iterating over large results
  - each_cell_as_arrays
  - each_row (still has bug in underlying code)
  - each_row_as_arrays (still has bug in underlying code)
- new HyperRecord methods for iterating over results in small batches, doesn't 
  exhaust memory on million-row queries
  - find_each_row (returns each row as HyperRecord object)
  - find_each_row_as_arrays (returns each row in native array format - fast)
  - find_to_scan_spec methods (converts finder options to scan spec)
  - find_with_scanner (converts finder options to a scanner)
- new finder option (:row_intervals) that retrieves cells from multiple 
  row intervals in a single query
- now depends on Thrift SVN revision 765279 or later.

0.2.4 2009/04/06
- find_by_hql support
- support for :select option in calls to ActiveRecord.find
- expose open_mutator, flush_mutator and close_mutator methods to HyperRecord
  to help speed up write-heavy applications
- don't duplicate cells unnecessarily while assembling rows

0.2.3 on 2009/03/18
- optimize writes by using set_cells_as_arrays to write data in cell native
  array form
- monkey patch borrow method of Thrift::FramedTransport needed to return
  substrings as well

0.2.2 on 2009/03/17
- monkey patch Thrift::FramedTransport to fix performance issue in thrift
  transport ruby code (1000x faster than default implementation)
- import and utilize new thrift client moethods that implement native
  array interface for cell retrieval (100x faster than creating
  Hypertable::ThriftGen::Cell objects)

0.2.1 on 2009/03/06 
- add rudimentary support for timestamps [kball]

0.2.0 on 2009/03/05
- bundle hypertable_adapter and hypertable_thrift_client code to
  simplify installation